--- a/simulations/simulated_multichannel_EEG_Gcoh.ipynb
+++ b/simulations/simulated_multichannel_EEG_Gcoh.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOXdwKgnSI0HkbAPzjNiHt7",
+      "authorship_tag": "ABX9TyPEYldUkbLoRhxZErDxc4FI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -35,52 +35,35 @@
         "import sys\n",
         "import importlib\n",
         "\n",
-        "if importlib.util.find_spec(\"clustering_GCoh\") is None:\n",
-        "  !git clone https://github.com/AraiKensuke/clustering_GCoh.git\n",
+        "if importlib.util.find_spec(\"GCoh\") is None:\n",
+        "  !git clone https://github.com/AraiKensuke/GCoh.git\n",
         "\n",
         "if importlib.util.find_spec(\"mne\") is None:\n",
         "  !pip install mne\n",
         "\n",
-        "sys.path.insert(1, \"/content/clustering_GCoh\")    #  add these to searchpath for python modules\n"
+        "sys.path.insert(1, \"/content/GCoh\")    #  add these to searchpath for python modules"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": []
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 322
-        },
-        "id": "YPE0pXfXkYlr",
-        "outputId": "3bbca8b3-d4a6-4954-8eb8-d1ebd701cdc5"
+        "id": "IxIB9uDyttQq"
       },
       "source": [
-        "import GCoh\n",
-        "\n"
-      ],
-      "execution_count": 19,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-19-102491d25ac3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GCoh'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
+        ""
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pFZmasOdqhX-"
+        "id": "pFZmasOdqhX-",
+        "outputId": "2bd79e41-6dc0-412c-a917-4feba7ff2269",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 374
+        }
       },
       "source": [
         "#####  Generate simulated EEG data.\n",
@@ -138,8 +121,22 @@
         "\n",
         "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-1965594bfe93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatconfig\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdatconf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimulations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_su\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GCoh.datconfig'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
