--- a/simulations/simulated_multichannel_EEG_Gcoh.ipynb
+++ b/simulations/simulated_multichannel_EEG_Gcoh.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyPEYldUkbLoRhxZErDxc4FI",
+      "authorship_tag": "ABX9TyOfNZ2R+kZ3yJp02daeQHLI",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,7 +27,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zkK7fy01jiB8"
+        "id": "zkK7fy01jiB8",
+        "outputId": "82ffd3d8-d625-495c-d15e-537cd49d0b74",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
       "source": [
         "#########  clone and install necessary packages from github repositories\n",
@@ -43,27 +47,44 @@
         "\n",
         "sys.path.insert(1, \"/content/GCoh\")    #  add these to searchpath for python modules"
       ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "IxIB9uDyttQq"
-      },
-      "source": [
-        ""
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Cloning into 'GCoh'...\n",
+            "remote: Enumerating objects: 72, done.\u001b[K\n",
+            "remote: Counting objects: 100% (72/72), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (47/47), done.\u001b[K\n",
+            "remote: Total 72 (delta 37), reused 45 (delta 20), pack-reused 0\u001b[K\n",
+            "Unpacking objects: 100% (72/72), done.\n",
+            "Collecting mne\n",
+            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4d/0e/6448521738d3357c205795fd5846d023bd7935bb83ba93a1ba0f7124205e/mne-0.21.2-py3-none-any.whl (6.8MB)\n",
+            "\u001b[K     |████████████████████████████████| 6.8MB 8.5MB/s \n",
+            "\u001b[?25hRequirement already satisfied: scipy>=0.17.1 in /usr/local/lib/python3.6/dist-packages (from mne) (1.4.1)\n",
+            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from mne) (1.18.5)\n",
+            "Installing collected packages: mne\n",
+            "Successfully installed mne-0.21.2\n"
+          ],
+          "name": "stdout"
+        }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "pFZmasOdqhX-",
-        "outputId": "2bd79e41-6dc0-412c-a917-4feba7ff2269",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 374
-        }
+        "id": "ZMKNtIDGuHBh"
+      },
+      "source": [
+        "import GCoh.datconfig"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "pFZmasOdqhX-"
       },
       "source": [
         "#####  Generate simulated EEG data.\n",
@@ -111,37 +132,22 @@
         "#mix(dt, EEG, rhythms, pknzs, grpC, 28, 34)\n",
         "#mix(dt, EEG, rhythms, pknzs, grpD, 40, 45)\n",
         "\n",
-        "outfn = _su.generate_artfctrmvd_filename()\n",
-        "_N.savetxt(outfn, EEG.T, fmt=(\"%.4f \" * nChs))\n",
-        "print(\"saved %s\"  % outfn)\n",
-        "\n",
-        "\n",
-        "\n",
         "\n",
         "\n",
         "\n"
       ],
-      "execution_count": 5,
-      "outputs": [
-        {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-5-1965594bfe93>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatconfig\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdatconf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msimulations\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msim_utils\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_su\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'GCoh.datconfig'",
-            "",
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "zzdvodpngOyV"
+        "id": "zzdvodpngOyV",
+        "outputId": "7ed784c7-8fb6-4426-9ce3-882127d4a584",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 495
+        }
       },
       "source": [
         "import numpy as _N\n",
@@ -179,8 +185,34 @@
         "dpss_bw=7\n",
         "f, findx, Ctot, Cvec = _w_gcoh.windowed_gcoh(Fs, wnd, slideby, X_cm, ch_w_CM, ch_picks, info, dpss_bw=dpss_bw)\n",
         "\n",
-        "pkldat = {\"VEC\" : Cvec, \"Cs\" : Ctot, \"fs\" : f[findx], \"chs_picks\" : arr_ch_picks, \"dpss_bw\" : dpss_bw}\n",
+        "#pkldat = {\"VEC\" : Cvec, \"Cs\" : Ctot, \"fs\" : f[findx], \"chs_picks\" : arr_ch_picks, \"dpss_bw\" : dpss_bw}\n",
         "\n"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "error",
+          "ename": "ModuleNotFoundError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-5-5db6c7d1ed3b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdatconfig\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mdatconf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 12\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwindowed_gcoh\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_w_gcoh\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     14\u001b[0m \u001b[0mdataset\u001b[0m \u001b[0;34m=\u001b[0m    \u001b[0mdatconf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_SIM\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m/content/GCoh/windowed_gcoh.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0msumojam\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdevscripts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcmdlineargs\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mprocess_keyval_args\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGCoh\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchronux_py\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mchronux_funcs\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0m_chrf\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mpreprocess_ver\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'sumojam'",
+            "",
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0;32m\nNOTE: If your import is failing due to a missing package, you can\nmanually install dependencies using either !pip or !apt.\n\nTo view examples of installing some common dependencies, click the\n\"Open Examples\" button below.\n\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "binNXSV-xgpt"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
