--- a/simulations/simulated_multichannel_EEG_Gcoh.ipynb
+++ b/simulations/simulated_multichannel_EEG_Gcoh.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMHfQrGk5STuQqHfzoyOt67",
+      "authorship_tag": "ABX9TyPNDHKlbNU+SEJ79CB9K4Hf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -31,7 +31,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "c9899c8d-3cf8-49fc-d22f-45acb22c0595"
+        "outputId": "01bad94a-cbdd-458e-fcb1-0478ce231742"
       },
       "source": [
         "#########  clone and install necessary packages from github repositories\n",
@@ -47,24 +47,15 @@
         "\n",
         "sys.path.insert(1, \"/content/GCoh\")    #  add these to searchpath for python modules"
       ],
-      "execution_count": 2,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Cloning into 'GCoh'...\n",
-            "remote: Enumerating objects: 81, done.\u001b[K\n",
-            "remote: Counting objects: 100% (81/81), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (54/54), done.\u001b[K\n",
-            "remote: Total 81 (delta 42), reused 49 (delta 22), pack-reused 0\u001b[K\n",
-            "Unpacking objects: 100% (81/81), done.\n",
-            "Collecting mne\n",
-            "\u001b[?25l  Downloading https://files.pythonhosted.org/packages/4d/0e/6448521738d3357c205795fd5846d023bd7935bb83ba93a1ba0f7124205e/mne-0.21.2-py3-none-any.whl (6.8MB)\n",
-            "\u001b[K     |████████████████████████████████| 6.8MB 7.8MB/s \n",
-            "\u001b[?25hRequirement already satisfied: scipy>=0.17.1 in /usr/local/lib/python3.6/dist-packages (from mne) (1.4.1)\n",
-            "Requirement already satisfied: numpy>=1.11.3 in /usr/local/lib/python3.6/dist-packages (from mne) (1.18.5)\n",
-            "Installing collected packages: mne\n",
-            "Successfully installed mne-0.21.2\n"
+            "Requirement already satisfied: scikit-learn in /usr/local/lib/python3.6/dist-packages (0.22.2.post1)\n",
+            "Requirement already satisfied: numpy>=1.11.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn) (1.18.5)\n",
+            "Requirement already satisfied: joblib>=0.11 in /usr/local/lib/python3.6/dist-packages (from scikit-learn) (0.17.0)\n",
+            "Requirement already satisfied: scipy>=0.17.0 in /usr/local/lib/python3.6/dist-packages (from scikit-learn) (1.4.1)\n"
           ],
           "name": "stdout"
         }
@@ -76,9 +67,9 @@
         "id": "ZMKNtIDGuHBh"
       },
       "source": [
-        "import GCoh.datconfig"
+        "import sklearn"
       ],
-      "execution_count": null,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -503,6 +494,274 @@
           "name": "stderr"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "LbmwytidS8el"
+      },
+      "source": [
+        "import numpy as _N\n",
+        "import scipy.io as _scio\n",
+        "import scipy.stats as _ss\n",
+        "import matplotlib.pyplot as _plt\n",
+        "from scipy.signal import savgol_filter\n",
+        "from sklearn import mixture\n",
+        "from GCoh.eeg_util import unique_in_order_of_appearance, increasing_labels_mapping, rmpd_lab_trnsfrm, find_or_retrieve_GMM_labels, shift_correlated_shuffle, mtfftc\n",
+        "import GCoh.skull_plot as _sp\n",
+        "import os\n",
+        "import AIiRPS.rpsms as rpsms\n",
+        "import GCoh.preprocess_ver as _ppv\n",
+        "#from AIiRPS.utils.dir_util import getResultFN\n",
+        "import GCoh.datconfig as datconf\n",
+        "\n",
+        "\n",
+        "\n",
+        "import sys\n",
+        "\n",
+        "\n",
+        "def autocorrelate(signal, maxlag):\n",
+        "     AC = _N.empty(maxlag*2+1)\n",
+        "     sigN= signal.shape[0]\n",
+        "     lag0mag = _N.dot(signal, signal) / (sigN*sigN)\n",
+        "     for lg in range(1, maxlag+1):\n",
+        "          datlen = sigN-lg\n",
+        "          AC[maxlag-lg] = (_N.dot(signal[0:datlen], signal[lg:lg+datlen])/(datlen*datlen)) / lag0mag\n",
+        "          AC[maxlag+lg] = AC[maxlag-lg]\n",
+        "     AC[maxlag] = 1\n",
+        "     return AC\n",
+        "\n",
+        "dataset =    datconf._RPS\n",
+        "c    = 2\n",
+        "if dataset == datconf._SIM:\n",
+        "    Fs   = 200\n",
+        "if dataset == datconf._RPS or dataset == datconf._STROOP:\n",
+        "    Fs   = 300\n",
+        "elif dataset == datconf._GONOGO:\n",
+        "    Fs   = 500\n",
+        "elif dataset == datconf._AAFFECT:\n",
+        "    Fs   = 500\n",
+        "\n",
+        "ch_w_CM, rm_chs, list_ch_names, ch_types = datconf.getConfig(dataset, sim_nchs=10)\n",
+        "arr_ch_names = _N.array(list_ch_names)\n",
+        "\n",
+        "ev_n   = 0\n",
+        "\n",
+        "\n",
+        "_WIDE = 0\n",
+        "_MED  = 1\n",
+        "_FINE = 2\n",
+        "_FINE1 = 3   #\n",
+        "\n",
+        "\n",
+        "\n",
+        "#bin     = 512\n",
+        "#slide   = 64\n",
+        "_WIDE = 0\n",
+        "_FINE = 1\n",
+        "\n",
+        "manual_cluster=False\n",
+        "armv_ver = 1\n",
+        "gcoh_ver = 3   #  bandwidth 7 ver 1, bandwidth 5 ver 2, bandwidth 9 ver 3\n",
+        "\n",
+        "win, slideby      = _ppv.get_win_slideby(gcoh_ver)\n",
+        "\n",
+        "hlfOverlap = int((win/slideby)*0.5)\n",
+        "\n",
+        "#s = \"../Neurable/DSi_dat/%(dsf)s_artfctrmvd_v%(av)d/%(dsf)s_gcoh_%(wn)d_%(sld)d_v%(av)d%(gv)d.dmp\" % {\"gf\" : rpsm[dat], \"dsf\" : dat, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"wn\" : bin, \"sld\" : slide}\n",
+        "#print(\"!!!!!!!!!!   %s\" % s)\n",
+        "#lm         = depickle(\"../DSi_dat/%(dsf)s_artfctrmvd/v%(av)d/%(dsf)s_gcoh_%(wn)d_%(sld)d_v%(av)d%(gv)d.dmp\" % {\"gf\" : rpsms.rpsm_eeg_as_key[dat], \"dsf\" : dat, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"wn\" : win, \"sld\" : slideby})\n",
+        "lm         = depickle(datconf.getDataFN(dataset, \"%(dsf)s_artfctrmvd/v%(av)d/%(dsf)s_gcoh_%(wn)d_%(sld)d_v%(av)d%(gv)d.dmp\" % {\"dsf\" : dat, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"wn\" : win, \"sld\" : slideby}))\n",
+        "# #lm         = depickle(\"../Neurable/DSi_dat/%(dat)s_gcoh_%(w)s_%(s)s.dmp\" % {\"dat\" : dat, \"w\" : bin, \"s\" : slide})\n",
+        "# #A_gcoh_mat = _scio.loadmat(\"DSi_dat/%(dat)s_gcoh_%(w)d_%(sl)d.mat\" % {\"dat\" : dat, \"w\" : bin, \"sl\" : slide})\n",
+        "# #A_gcoh     = A_gcoh_mat[\"Cs\"]\n",
+        "\n",
+        "strt       = 0  #  if start at middle of experiment\n",
+        "A_gcoh     = lm[\"Cs\"][strt:]\n",
+        "n_fs       = lm[\"fs\"]\n",
+        "\n",
+        "\n",
+        "outdir1     = datconf.getResultFN(dataset, \"%(dir)s\" % {\"dir\" : dat})\n",
+        "if not os.access(outdir1, os.F_OK):\n",
+        "     os.mkdir(outdir1)\n",
+        "outdir     = datconf.getResultFN(dataset, \"%(dir)s/v%(av)d%(gv)d\" % {\"dir\" : dat, \"av\" : armv_ver, \"gv\" : gcoh_ver})\n",
+        "if not os.access(outdir, os.F_OK):\n",
+        "     os.mkdir(outdir)\n",
+        "#  12.10.2020\n",
+        "################  egenvectors\n",
+        "#imag_evs  = A_gcoh_mat[\"VEC\"][0]\n",
+        "\n",
+        "\n",
+        "imag_evs  = lm[\"VEC\"][strt:, :, ev_n]\n",
+        "\n",
+        "L_gcoh  = A_gcoh.shape[0]\n",
+        "nChs    = imag_evs.shape[2]\n",
+        "real_evs  = _N.empty((L_gcoh, n_fs.shape[0], nChs))\n",
+        "\n",
+        "chs = lm[\"chs_picks\"]\n",
+        "ch_names = arr_ch_names[chs].tolist()\n",
+        "\n",
+        "for ti in range(L_gcoh):\n",
+        "    real_evs[ti] = _N.abs(imag_evs[ti])\n",
+        "\n",
+        "mn = _N.mean(real_evs, axis=0)\n",
+        "sd = _N.std(real_evs, axis=0)\n",
+        "\n",
+        "fs = lm[\"fs\"]\n",
+        "\n",
+        "\n",
+        "#frngs = [[12, 18], [20, 25], [28, 35], [38, 45]]\n",
+        "#frngs = [[12, 18], [20, 25], [28, 35], [35, 42], [38, 45]]\n",
+        "#frngs = [[10, 15]]\n",
+        "#frngs = [[10, 18]]\n",
+        "#frngs = [[12, 18]]\n",
+        "#frngs = [[10, 15], [20, 25], [30, 40]]\n",
+        "#frngs = [[18, 25]]\n",
+        "frngs = [[15, 25]]\n",
+        "#frngs = [[35, 42]]\n",
+        "\n",
+        "#frngs = [[25, 35]]\n",
+        "#frngs = [[43, 49]]\n",
+        "#frngs = [[40, 50]]\n",
+        "#frngs = [[30, 45]]\n",
+        "#frngs = [[38, 50]]\n",
+        "#frngs = [[32, 48]]\n",
+        "#frngs = [[35, 47]]\n",
+        "#frngs = [[8, 12], [12, 18]]\n",
+        "#frngs = [[33, 40], [34, 41], [35, 42], [36, 43], [37, 44]]\n",
+        "#frngs = [[12, 18], [18, 25], [25, 35], [35, 45]]\n",
+        "#frngs = [[22, 28], [35, 42]]\n",
+        "#frngs = [[28, 35], [38, 45]]\n",
+        "\n",
+        "ignore_stored = True\n",
+        "pcs     = _N.empty(len(frngs))\n",
+        "minK    =11\n",
+        "maxK    =12\n",
+        "#minK = 6\n",
+        "#maxK = 7\n",
+        "try_Ks  = _N.arange(minK, maxK+1)\n",
+        "#TRs      = _N.array([1, 1, 3, 5, 10, 15, 20, 25, 25])  # more tries for higher K\n",
+        "TRs      = _N.array([1, 15, 20, 25, 25, 30, 40, 50, 60, 60, 60, 60, 60, 60, 80, 80, 80, 80])  # more tries for higher K\n",
+        "#TRs      = _N.array([60])  # more tries for higher K\n",
+        "\n",
+        "bics = _N.ones(((maxK-minK), _N.max(TRs)))*1000000\n",
+        "labs = _N.empty((maxK-minK, _N.max(TRs), real_evs.shape[0]), dtype=_N.int)\n",
+        "\n",
+        "nState_start = 0\n",
+        "\n",
+        "for ich in range(len(frngs)):\n",
+        "    fL = frngs[ich][0]\n",
+        "    fH = frngs[ich][1]\n",
+        "\n",
+        "    irngs = _N.where((fs > fL) & (fs < fH))[0]\n",
+        "    iL    = irngs[0]\n",
+        "    iH    = irngs[-1]    \n",
+        "\n",
+        "    #Apr242020_16_53_03_gcoh_256_64\n",
+        "    nStates, rmpd_lab = find_or_retrieve_GMM_labels(dataset, dat, \"%(gf)s_gcoh%(evn)d_%(wn)d_%(sld)d_v%(av)d%(gv)d\" % {\"gf\" : dat, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"wn\" : win, \"sld\" : slideby, \"evn\" : ev_n}, real_evs, iL, iH, fL, fH, armv_ver, gcoh_ver, which=0, try_K=try_Ks, TRs=TRs, ignore_stored=ignore_stored, manual_cluster=manual_cluster, do_pca=True, min_var_expld=0.99)\n",
+        "    ps = _N.arange(nStates)\n",
+        "    ps += nState_start\n",
+        "    nState_start += nStates\n",
+        "\n",
+        "    #nStates, rmpd_lab = find_or_retrieve_GMM_labels(rpsm[dat], \"%(dat)s_gcoh_%(w)d_%(s)d\" % {\"dat\" : dat, \"w\" : bin, \"s\" : slide}, real_evs, iL, iH, fL, fH, which=0, try_K=try_Ks, TRs=TRs, log_transform=False)\n",
+        "    \"\"\"\n",
+        "    ###############\n",
+        "    for K in range(minK, maxK):\n",
+        "        for tr in range(TRs[K]):\n",
+        "            gmm = mixture.GaussianMixture(n_components=K, covariance_type=\"full\")\n",
+        "\n",
+        "            gmm.fit(_N.sum(real_evs[:, iL:iH], axis=1))\n",
+        "            bics[K-minK, tr] = gmm.bic(_N.sum(real_evs[:, iL:iH], axis=1))\n",
+        "            labs[K-minK, tr] = gmm.predict(_N.sum(real_evs[:, iL:iH], axis=1))\n",
+        "\n",
+        "    coords = _N.where(bics == _N.min(bics))\n",
+        "    print(\"min bic %.4e\" % _N.min(bics))\n",
+        "    bestLab = labs[coords[0][0], coords[1][0]]   #  indices in 2-D array\n",
+        "    rmpd_lab = increasing_labels_mapping(bestLab)\n",
+        "\n",
+        "    nStates =  list(range(minK, maxK))[coords[0][0]]\n",
+        "    \"\"\"\n",
+        "    out_u = _N.mean(real_evs[:, iL:iH], axis=1)\n",
+        "    out = _N.empty((L_gcoh, nChs))\n",
+        "    iS  = 0\n",
+        "    for ns in range(nStates):\n",
+        "        ls = _N.where(rmpd_lab == ns)[0]\n",
+        "        out[iS:iS+len(ls)] = _N.mean(real_evs[ls, iL:iH], axis=1)\n",
+        "        iS += len(ls)\n",
+        "\n",
+        "    iS = 0\n",
+        "    clrs  = [\"black\", \"orange\", \"blue\", \"green\", \"red\", \"lightblue\", \"grey\", \"pink\", \"yellow\", \"brown\", \"cyan\", \"purple\", \"black\", \"orange\", \"blue\", \"green\", \"red\", \"black\", \"orange\", \"blue\", \"green\", \"red\", \"lightblue\", \"grey\", \"pink\", \"yellow\", \"brown\", \"cyan\", \"purple\", \"black\", \"orange\", \"blue\", \"green\", \"red\"]\n",
+        "    W   = L_gcoh\n",
+        "    H   = nChs\n",
+        "    disp_wh_ratio = 3\n",
+        "    aspect = (W/H)/disp_wh_ratio\n",
+        "    unit = 2.5\n",
+        "    fig = _plt.figure(figsize=(disp_wh_ratio*unit + 1, 3*unit+unit/2))\n",
+        "    _plt.subplot2grid((2, 1), (0, 0))        \n",
+        "    _plt.title(\"1st GCoh eigenvector - temporal order\")\n",
+        "    #fig.add_subplot(nStates+2, 1, 1)  \n",
+        "    _plt.imshow(out_u.T, aspect=aspect)\n",
+        "    _plt.ylim(-(nStates+2), nChs+0.1)\n",
+        "    for ns in range(nStates):\n",
+        "        nsx = _N.where(rmpd_lab == ns)[0]\n",
+        "        _plt.scatter(nsx, _N.ones(len(nsx))*ns - nStates - 1, color=clrs[ns], lw=1.5, s=4)\n",
+        "    _plt.xlim(0, L_gcoh)\n",
+        "    _plt.xlabel(\"(sample #) - not in experimental temporal order\", fontsize=17)\n",
+        "    _plt.ylabel(\"electrode #\", fontsize=16)\n",
+        "    _plt.xlabel(\"time bin\", fontsize=16)\n",
+        "    _plt.xticks(fontsize=14)\n",
+        "    _plt.yticks(fontsize=14)\n",
+        "\n",
+        "    _plt.subplot2grid((2, 1), (1, 0))        \n",
+        "    _plt.title(\"1st GCoh eigenvector - reordered by cluster label\")\n",
+        "    #fig.add_subplot(nStates+2, 1, 1)    \n",
+        "    _plt.imshow(out.T, aspect=aspect)\n",
+        "    _plt.ylim(-(nStates+2), nChs+0.1)\n",
+        "    for ns in range(nStates):\n",
+        "        ls = _N.where(rmpd_lab == ns)[0]\n",
+        "        liS = iS\n",
+        "        iS += len(ls)\n",
+        "        _plt.plot([liS, iS], [ns-nStates-1, ns-nStates-1], color=clrs[ns], lw=3.5)\n",
+        "        if ns < nStates-1:\n",
+        "            _plt.axvline(x=iS, color=\"white\", lw=1)\n",
+        "    _plt.xlim(0, L_gcoh)\n",
+        "    _plt.suptitle(\"%(ky)s   %(1)d-%(2)dHz    GCoh val: %(gcoh).3f   %(sts)s\" % {\"1\" : fL, \"2\" : fH, \"gcoh\" : _N.mean(lm[\"Cs\"][:, irngs]), \"ky\" : dat, \"sts\" : str(ps)})\n",
+        "    _plt.xlabel(\"(sample #) - not in experimental temporal order\", fontsize=17)\n",
+        "    _plt.ylabel(\"electrode #\", fontsize=16)\n",
+        "    _plt.xlabel(\"time bin\", fontsize=16)\n",
+        "    _plt.xticks(fontsize=14)\n",
+        "    _plt.yticks(fontsize=14)\n",
+        "\n",
+        "    iS = 0\n",
+        "    for ns in range(nStates):\n",
+        "        ls = _N.where(rmpd_lab == ns)[0]\n",
+        "        iS += len(ls)\n",
+        "        if ns < nStates-1:\n",
+        "            _plt.axvline(x=iS, color=\"white\", lw=1)\n",
+        "    fig.subplots_adjust(left=0.1, bottom=0.1, right=0.9, hspace=0.3)\n",
+        "\n",
+        "    _plt.savefig(\"%(od)s/%(dat)s_%(w)d_%(sl)d_clusters_coh_pattern_%(evn)d_%(1)d_%(2)d_v%(av)d%(gv)d\" % {\"1\" : fL, \"2\" : fH, \"dat\" : dat, \"w\" : win, \"sl\" : slideby, \"od\" : outdir, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"evn\" : ev_n}, transparent=True)\n",
+        "    #_plt.close()\n",
+        "\n",
+        "    max_over_fs_each_state = _N.empty((nChs, nStates))\n",
+        "    for ns in range(nStates):\n",
+        "        ls = _N.where(rmpd_lab == ns)[0]\n",
+        "        mn_over_fs = _N.mean(real_evs[ls, iL:iH], axis=1)\n",
+        "        #min_all    = _N.min(mn_over_fs, axis=0)\n",
+        "        max_over_fs_each_state[:, ns]    = _N.max(mn_over_fs, axis=0)\n",
+        "    maxComp = _N.max(max_over_fs_each_state)\n",
+        "\n",
+        "    all_vecs = _N.empty((nChs, nStates))\n",
+        "    \n",
+        "    for ns in range(nStates):\n",
+        "        ls = _N.where(rmpd_lab == ns)[0]\n",
+        "        mn_over_fs = _N.mean(real_evs[ls, iL:iH], axis=1)\n",
+        "        min_all    = _N.min(mn_over_fs, axis=0)\n",
+        "        all_vecs[:, ns] = (min_all / maxComp)*1e-5\n",
+        "    _sp.do_skull_plot_all_EVs(all_vecs, ps, ch_names, \"%(od)s/%(dat)s_%(w)d_%(sl)d_skull_coh_pattern_%(evn)d_%(1)d_%(2)d_v%(av)d%(gv)d\" % {\"1\" : fL, \"2\" : fH, \"dat\" : dat, \"w\" : win, \"sl\" : slideby, \"av\" : armv_ver, \"gv\" : gcoh_ver, \"od\" : outdir, \"evn\" : ev_n}, dat, fL, fH)\n"
+      ],
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "code",
