--- a/simulations/simulated_multichannel_EEG_Gcoh.ipynb
+++ b/simulations/simulated_multichannel_EEG_Gcoh.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNoad6IkDd2yoseBXFdD0ZN",
+      "authorship_tag": "ABX9TyNr+FSa3wX96tR+onDJysP1",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -54,7 +54,7 @@
         "\n",
         "sys.path.insert(1, \"/content/GCoh\")    #  add these to searchpath for python modules"
       ],
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -63,7 +63,8 @@
         "id": "7zrr01x2i0DB"
       },
       "source": [
-        "2)  Create simulated EEG data\n"
+        "2)  Create simulated EEG data with multiple coherent channels.  By coherent, we mean here phase locked in some frequency range.  The EEG data we create here is a noisy oscillation in 20Hz range in each channel.  At certain times, several channels will form a temporary group that will be coherent (but can have a fixed\n",
+        "phase difference between them) for a few seconds.  \n"
       ]
     },
     {
@@ -123,7 +124,7 @@
         "\n",
         "\n"
       ],
-      "execution_count": 50,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -371,7 +372,7 @@
         "        _plt.axvline(x=iS, color=\"white\", lw=1)\n",
         "fig.subplots_adjust(left=0.1, bottom=0.1, right=0.9, hspace=0.3)\n"
       ],
-      "execution_count": 86,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
