--- a/simulations/simulated_multichannel_EEG_Gcoh.ipynb
+++ b/simulations/simulated_multichannel_EEG_Gcoh.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "Untitled14.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNr+FSa3wX96tR+onDJysP1",
+      "toc_visible": true,
+      "authorship_tag": "ABX9TyO44dNarmY5KXssIcUTM7mJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -30,9 +31,7 @@
         "id": "RkfafBkShxdp"
       },
       "source": [
-        "**Please execute the following cells.**\n",
-        "\n",
-        "1) Install necessary packages."
+        "# 1) Install necessary packages."
       ]
     },
     {
@@ -63,7 +62,8 @@
         "id": "7zrr01x2i0DB"
       },
       "source": [
-        "2)  Create simulated EEG data with multiple coherent channels.  By coherent, we mean here phase locked in some frequency range.  The EEG data we create here is a noisy oscillation in 20Hz range in each channel.  At certain times, several channels will form a temporary group that will be coherent (but can have a fixed\n",
+        "# 2)  Create simulated EEG data with multiple coherent channels.  \n",
+        "By coherent, we mean here phase locked in some frequency range.  The EEG data we create here is a noisy oscillation in 20Hz range in each channel.  At certain times, several channels will form a temporary group that will be coherent (but can have a fixed\n",
         "phase difference between them) for a few seconds.  \n"
       ]
     },
@@ -133,7 +133,7 @@
         "id": "zLMdUw7UheEm"
       },
       "source": [
-        "3)  Calculate the GCoh and eigenvectors.  \n",
+        "# 3)  Calculate the GCoh and eigenvectors.  \n",
         "\n",
         "Here the only thing to that might need to be changed is win and slideby.  Window over which GCoh is calculated, and\n",
         "how much the window is slid (allows overlapping).  \n",
@@ -195,7 +195,7 @@
         "id": "ATF0HfoojQU9"
       },
       "source": [
-        "4) Cluster and visualize Eigenvalues"
+        "# 4) Cluster and visualize Eigenvalues"
       ]
     },
     {
