Colaboratory を使用して作成しました

--- a/cluster_eeg_gcoh.ipynb
+++ b/cluster_eeg_gcoh.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "Untitled13.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNCdW+LI3z0AOEffjndStuP",
+      "authorship_tag": "ABX9TyO2SNHzxFSYVIbgkYDp7EBh",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,6 +23,15 @@
       "source": [
         "<a href=\"https://colab.research.google.com/github/AraiKensuke/GCoh/blob/Include_dpss_bw_in_preprocessver/cluster_eeg_gcoh.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Demonstration of sliding-window Global Coherence analysis on 21-channel dry-electrode EEG data**"
+      ],
+      "metadata": {
+        "id": "HdazTIvVmXx6"
+      }
     },
     {
       "cell_type": "markdown",
@@ -53,7 +62,7 @@
       "metadata": {
         "id": "WOUdKlxd_jAa"
       },
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -81,7 +90,7 @@
       "metadata": {
         "id": "mvbdGrLxmwGz"
       },
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -178,25 +187,9 @@
         "                       \"T4\"])\n",
         "ev_n   = 0\n",
         "\n",
-        "\n",
-        "_WIDE = 0\n",
-        "_MED  = 1\n",
-        "_FINE = 2\n",
-        "_FINE1 = 3   #\n",
-        "\n",
-        "\n",
-        "\n",
-        "#bin     = 384\n",
-        "#slide   = 64\n",
-        "_WIDE = 0\n",
-        "_FINE = 1\n",
-        "\n",
-        "manual_cluster=False\n",
-        "armv_ver = 1\n",
-        "gcoh_ver = 4   #  bandwidth 7 ver 1, bandwidth 5 ver 2, bandwidth 9 ver 3\n",
-        "\n",
-        "#process_keyval_args(globals(), sys.argv[1:])\n",
-        "win, slideby      = _ppv.get_win_slideby(gcoh_ver)\n",
+        "####  Calculate GCoH over window size win, then slide by \"slideby\" to do calculation of next window \n",
+        "win=512\n",
+        "slideby=64\n",
         "\n",
         "hlfOverlap = int((win/slideby)*0.5)\n",
         "\n",
@@ -216,7 +209,7 @@
         "id": "Pma-VCjh-4jj",
         "outputId": "82a41584-d21b-4325-aaab-e0d21f41a878"
       },
-      "execution_count": 59,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -244,7 +237,7 @@
       "source": [
         "gcoh_pkl = calc_gcoh(eeg_LP.T, dataset, None, 512, 64)\n",
         "vec_mag = _N.abs(gcoh_pkl[\"VEC\"])\n",
-        "fs_gcoh = gcoh_pkl[\"fs\"]\n"
+        "fs_gcoh = gcoh_pkl[\"fs\"]"
       ],
       "metadata": {
         "colab": {
@@ -253,7 +246,7 @@
         "id": "PkJZfWMdqXhf",
         "outputId": "9e4fc182-3ce6-4638-d091-141c2ad300a9"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,7 +296,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "**Plot the EV timeseries**"
+        "**Plot the EV timeseries, cluster them and show skull plots of coherence states**"
       ],
       "metadata": {
         "id": "pxjpRO5LkjaQ"
@@ -426,7 +419,7 @@
         },
         "outputId": "21ea2b77-31b4-4893-9e69-2be00dae636d"
       },
-      "execution_count": 62,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
